create backend to control robot on orders

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
     <body>
         <div id="blocklyDiv"></div>
 
+        <script src="hello/js/autobahn.min.js"></script>
+
         <script src="JS-Interpreter/acorn.js"></script>
         <script src="JS-Interpreter/interpreter.js"></script>
 
